src/tests/snapshots/ast2ir__object_props.snap
---
created: "2019-03-26T21:25:00.597151300Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: ppr
---
_obj = <global o>
_prp = "x"
<dead> = _obj[_prp]
_obj$1 = <global o>
_prp$1 = <global x>
<dead> = _obj$1[_prp$1]
_obj$2 = <global o>
_prp$2 = "x"
_val = 1
_obj$2[_prp$2] <- _val
<dead> = _val
_obj$3 = <global o>
_prp$3 = <global x>
_val$1 = 1
_obj$3[_prp$3] <- _val$1
<dead> = _val$1
_obj$4 = <global o>
_prp$4 = "x"
<dead> = <delete> _obj$4[_prp$4]
_obj$5 = <global o>
_prp$5 = <global x>
<dead> = <delete> _obj$5[_prp$5]
