src/tests/snapshots/ast2ir__objects.snap
---
created: "2019-03-30T06:30:06.079607800Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    ({ x, y: 1, [z]: 2 })\n"
---
_key = "x"
_val = <global x>
_key$1 = "y"
_val$1 = 1
_key$2 = <global z>
_val$2 = 2
<dead> = { [_key]: _val, [_key$1]: _val$1, [_key$2]: _val$2 }
