src/tests/snapshots/ast2ir__preserves_prop_calls.snap
---
created: "2019-04-07T06:13:24.553053800Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    console.log.bind(console);\n"
---
_obj = <global console>
_prp = "log"
_obj$1 = _obj[_prp]
_prp$1 = "bind"
_arg = <global console>
<dead> = _obj$1[_prp$1](_arg)
