src/tests/snapshots/ast2ir__referencing_outer_scope_declared_later2.snap
---
created: "2019-04-05T03:27:19.800930700Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    g = function() {\n        x;\n        y; // global\n        z; // global\n    };\n    {\n        var x = 0;\n        let y = 1;\n        const z = 2;\n    }\n"
---
_ini = <void>
x <= _ini
_val = <function>:
    <dead> = *x
    <dead> = <global y>
    <dead> = <global z>
<global g> <- _val
<dead> = _val
_ini$1 = 0
x <- _ini$1
_ini$2 = 1
y <= _ini$2
_ini$3 = 2
z <= _ini$3
