src/tests/snapshots/ast2ir__switch_scoping_forwards.snap
---
created: "2019-04-06T00:06:45.310100600Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    switch (x) {\n        case 1:\n            var v = 2;\n            let l = 3;\n        default:\n            g1 = v;\n            g2 = l;\n    }\n"
---
_ini = <void>
v <= _ini
_swi = <global x>
_tst = 1
<switch> _swi:
    <case> _tst:
    _ini$1 = 2
    v <- _ini$1
    _ini$2 = 3
    l <= _ini$2
    <default>:
    _val = *v
    <global g1> <- _val
    <dead> = _val
    _val$1 = *l
    <global g2> <- _val$1
    <dead> = _val$1
