src/tests/snapshots/ast2ir__var_hoisting_1.snap
---
created: "2019-03-30T04:37:36.391064700Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    x = 1;\n    {\n        var x = 2;\n    }\n    x = 3;\n"
---
_ini = <void>
x :- _ini
_val = 1
x <- _val
<dead> = _val
_ini$1 = 2
x <- _ini$1
_val$1 = 3
x <- _val$1
<dead> = _val$1
