src/tests/snapshots/ast2ir__var_hoisting_2.snap
---
created: "2019-03-30T04:37:36.391064700Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    x = 1;\n    {\n        for (var x of 2);\n    }\n    x = 3;\n"
---
_ini = <void>
x :- _ini
_val = 1
x <- _val
<dead> = _val
_rhs = 2
<foreach of> _rhs:
    _for = <argument 0>
    x <- _for
_val$1 = 3
x <- _val$1
<dead> = _val$1
