src/tests/snapshots/ast2ir__var_reassignment_1.snap
---
created: "2019-03-30T04:37:36.391064700Z"
creator: insta@0.7.1
source: src/tests/ast2ir.rs
expression: "\n    var x = 1;\n    const y = 1;\n    {\n        var x = 2;\n        const y = 2;\n    }\n"
---
_ini = <void>
x :- _ini
_ini$1 = 1
x <- _ini$1
_ini$2 = 1
y :- _ini$2
_ini$3 = 2
x <- _ini$3
_ini$4 = 2
y$1 :- _ini$4
